Add ConfigManager and improve OpenRouter config handling
Introduces ConfigManager for centralized configuration management, supporting .env files and environment variables. Updates OpenRouter API scripts to use ConfigManager, removes hardcoded API keys, improves security, and updates .gitignore to exclude sensitive config files. Cleans up unused documentation and refactors diary-generator for better config usage.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .idea/vcs.xml
 includes/config.php
 includes/env.php
+
+# Environment variables
+.env
+
+# OpenRouter config (contains API keys)
+api/openrouter/config.php
